# Zero-Engine

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  vcpkg.json
App/: App.cpp  App.h  CMakeLists.txt  Voxel Engine.h  imgui.ini  zero_engine.cpp
App/Assets/Models/: cube.gltf  license.txt  new.gltf  plano.gltf  private.mtl  scene.gltf  untitled.gltf
App/Assets/Models/m2/: license.txt
App/Assets/Models/m4/: new.gltf
App/Assets/Shaders/: Grid.frag  ModelFragment.glsl  ModelVertex.glsl  fragment.glsl  vertex.glsl
Core/: CMakeLists.txt  core.cpp
Core/libraries/Buffers/: AttributeLayout.h  EBO.cpp  EBO.h  FBO.cpp  FBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Core/libraries/Core/: Assert.h
Core/libraries/Debug/: Logger.cpp  Logger.h
Core/libraries/ECS/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  IComponent.h
Core/libraries/Editor/: EditorCamera.cpp  EditorCamera.h
Core/libraries/Events/: Event.h  MouseEvents.h
Core/libraries/GLGraphics/: EBO.cpp  FBO.cpp  Shader.cpp  Texture.cpp  VBO.cpp
Core/libraries/GL_graphics/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
Core/libraries/Modules/: CameraUpdater.cpp  ModelReader.cpp  ModelReader.h  Renderer.cpp  Renderer.h
Core/libraries/ResourceManagement/: Material.h  Mesh.cpp  Mesh.h  ModelReader.cpp  ModelReader.h  model.h
Core/libraries/Scene/: Components.h  Scene.h  SceneCamera.cpp  SceneCamera.h
Core/libraries/core/: Application.h  BaseApp.cpp  BaseApp.h  Input.cpp  Input.h  Logger.cpp  Logger.h  MouseCodes.h  Window.cpp  Window.h
ZeroCore/: CMakeLists.txt
ZeroCore/libraries/Core/: Aliases.h  Application.cpp  Application.h  Assert.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  LogSink.h  Logger.cpp  Logger.h  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
ZeroCore/libraries/Editor/: EditorCamera.cpp  EditorCamera.h  ImguiLayer.cpp  ImguiLayer.h
ZeroCore/libraries/Events/: Event.h  KeyEvents.h  WindowEvents.h
ZeroCore/libraries/GLGraphics/: Camera.h  EBO.h  FBO.cpp  FBO.h  Shader.cpp  Shader.h  ShaderParser.cpp  ShaderParser.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.h
ZeroCore/libraries/Modules/: CameraUpdater.cpp  CameraUpdater.h  EntitySelector.cpp  EntitySelector.h  ModelReader.cpp  ModelReader.h  Renderer.cpp  Renderer.h
ZeroCore/libraries/ResourceManagement/: Billboard.cpp  Billboard.h  Material.h  Mesh.cpp  Mesh.h  Resource.h  ResourceManager.cpp  ResourceManager.h  model.h
ZeroCore/libraries/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h
ZeroStudio/: CMakeLists.txt  imgui.ini
ZeroStudio/Assets/Core/Shaders/: BillboardShader.glsl  DefaultShader.glsl  EntityEditor.glsl
ZeroStudio/Assets/Models/: cube.glb  license.txt  retro_1911_pistol.glb  rigged_t-rex_lego.glb  scene.gltf
ZeroStudio/Assets/Models/m2/: scene.gltf
ZeroStudio/Assets/Shaders/: ColorPicking.glsl  EntityEditor.glsl  FlatColor.glsl  FlatSelectionColor.glsl  Grid.frag  Grid.glsl  Grid.vert  Model.glsl  ModelFragment.glsl
ZeroStudio/Assets/Shaders/Old/: ModelVertex.glsl
ZeroStudio/Panels/: EditorViewPanel.cpp  EditorViewPanel.h  Hierachy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h  LogPanel.cpp  LogPanel.h  Logger.h  PreviewPanel.cpp  PreviewPanel.h
ZeroStudio/src/: Editor.cpp  Editor.h  EditorLayer.cpp  EditorLayer.h  ZeroStudio.cpp
